# SynTerm

./: .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md  TODO.md
examples/: color_prompt.rs  example1.rs
src/: lib.rs
tests/: test.rs
