[package]
name = "synterm"
description = "A Rust library for making beautiful REPLs and Shells with fish like as you type syntax highlighting"
version = "0.3.1"
authors = ["Sean Hellum <seanhellum45@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/JesterOrNot/SynTerm"
readme = "README.md"

[dependencies]
crossterm = "0.17.3"
logos = "0.11"
